fix right align error

--- a/client/src/components/QuestionAnswerFolder/Q&A.css
+++ b/client/src/components/QuestionAnswerFolder/Q&A.css
@@ -15,5 +15,5 @@
 }
 .Qhelpful {
   position: absolute;
-  right: ;
+  right: 0px;
 }
